--- a/gitstats/files.html
+++ b/gitstats/files.html
@@ -20,11 +20,11 @@
 </ul>
 </div>
 <dl>
-<dt>Total files</dt><dd>18</dd><dt>Total lines</dt><dd>2132</dd><dt>Average file size</dt><dd>3861.17 bytes</dd></dl>
+<dt>Total files</dt><dd>51</dd><dt>Total lines</dt><dd>3150</dd><dt>Average file size</dt><dd>2617.33 bytes</dd></dl>
 
 <h2 id="file_count_by_date"><a href="#file_count_by_date">File count by date</a></h2>
 
 <img src="files_by_date.png" alt="Files by Date">
 <h2 id="extensions"><a href="#extensions">Extensions</a></h2>
 
-<table class="sortable" id="ext"><tr><th>Extension</th><th>Files (%)</th><th>Lines (%)</th><th>Lines/file</th></tr><tr><td></td><td>1 (5.56%)</td><td>21 (0.98%)</td><td>21</td></tr><tr><td>html</td><td>12 (66.67%)</td><td>876 (41.09%)</td><td>73</td></tr><tr><td>md</td><td>1 (5.56%)</td><td>33 (1.55%)</td><td>33</td></tr><tr><td>py</td><td>1 (5.56%)</td><td>400 (18.76%)</td><td>400</td></tr><tr><td>sql</td><td>1 (5.56%)</td><td>639 (29.97%)</td><td>639</td></tr><tr><td>txt</td><td>2 (11.11%)</td><td>166 (7.79%)</td><td>83</td></tr></table></body></html>
+<table class="sortable" id="ext"><tr><th>Extension</th><th>Files (%)</th><th>Lines (%)</th><th>Lines/file</th></tr><tr><td></td><td>1 (1.96%)</td><td>21 (0.67%)</td><td>21</td></tr><tr><td>cache</td><td>1 (1.96%)</td><td>7 (0.22%)</td><td>7</td></tr><tr><td>css</td><td>1 (1.96%)</td><td>145 (4.60%)</td><td>145</td></tr><tr><td>dat</td><td>10 (19.61%)</td><td>229 (7.27%)</td><td>22</td></tr><tr><td>gif</td><td>3 (5.88%)</td><td>6 (0.19%)</td><td>2</td></tr><tr><td>html</td><td>18 (35.29%)</td><td>1060 (33.65%)</td><td>58</td></tr><tr><td>js</td><td>1 (1.96%)</td><td>324 (10.29%)</td><td>324</td></tr><tr><td>md</td><td>1 (1.96%)</td><td>34 (1.08%)</td><td>34</td></tr><tr><td>plot</td><td>10 (19.61%)</td><td>127 (4.03%)</td><td>12</td></tr><tr><td>py</td><td>1 (1.96%)</td><td>400 (12.70%)</td><td>400</td></tr><tr><td>sql</td><td>2 (3.92%)</td><td>889 (28.22%)</td><td>444</td></tr><tr><td>txt</td><td>2 (3.92%)</td><td>166 (5.27%)</td><td>83</td></tr></table></body></html>
